[workspace]
  members = ["contracts/*"]
  resolver = "2"

  [workspace.dependencies]
    soroban-sdk = "=22.0.8"
    soroban-token-sdk = "=22.0.8"


[profile.release]
  codegen-units = 1
  debug = 0
  debug-assertions = false
  lto = true
  opt-level = "z"
  overflow-checks = true
  panic = "abort"
  strip = "symbols"

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
  debug-assertions = true
  inherits = "release"
